--- a/views/purchaseAndServices/show.ejs
+++ b/views/purchaseAndServices/show.ejs
@@ -50,6 +50,7 @@
                   <th>Quantidade</th>
                   <th>Item</th>
                   <th>Especificações</th>
+                  <th>Unidade</th>
                   <th>Valor</th>
                 </tr>
               </thead>
@@ -64,6 +65,9 @@
                     </td>
                     <td>
                       <%= item.description %>
+                    </td>
+                    <td>
+                      <%= item.city %>
                     </td>
                     <td>
                       <%= item.value %>
