--- a/views/purchaseAndServices/revision_orcament.ejs
+++ b/views/purchaseAndServices/revision_orcament.ejs
@@ -14,6 +14,7 @@
           <td>Quantidade</td>
           <td>Item</td>
           <td>Especificação</td>
+          <td>Unidade</td>
           <td>R$</td>
           <td>Confirmar/alterar R$</td>
         </tr>
@@ -31,6 +32,8 @@
 
             <td class="col-md-4"><input type="text" name="description<%=count %>" class="form-control" id="especificacao1" value="<%= item.description %>" required placeholder="Especificação" disabled /></td>
 
+            <td class="col-md-2"><input type="text" name="city<%=count %>" class="form-control" id="valor1" value="<%= item.city %>" required placeholder="Valor" disabled /></td>
+
             <td class="col-md-2"><input type="text" name="value<%=count %>" class="form-control" id="valor1" value="<%= item.value %>" required placeholder="Valor" disabled /></td>
 
             <td class="col-md-2"><input type="text" name="newvalue<%=count %>" data-mask='###.###.##0,00' data-mask-reverse='true' class="form-control" id="newvalor<%=count %>" required placeholder="Altere o valor" /></td>
@@ -45,11 +48,15 @@
 
           <% count++; }); %>
 
-
-
-
       </tbody>
     </table>
+
+    <div class="valor-total">
+      <label>Valor Total:</label>
+      <label name="total" id="valor-display">
+        <%= purchase.total %>
+      </label>
+    </div>
 
     <hr style="width: 90%;">
     <input type="file" name="files" size="50" accept="image/jpeg,image/png,image/jpg,application/pdf" multiple />
