--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,6 +31,8 @@
   <link rel="stylesheet" href="../../css/estiloPagamentos.css">
   <link rel="stylesheet" href="../../css/estiloCompras.css">
   <link rel="stylesheet" href="../../css/sidebar.css">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
 </head>
 
 <body>
