--- a/views/purchaseAndServices/index.ejs
+++ b/views/purchaseAndServices/index.ejs
@@ -79,7 +79,7 @@
 <label for="exampleFormControlTextarea1">Justificativa</label>
 <textarea name="justification" required placeholder="Informe a justificativa" rows="5" cols="180"></textarea>
 <br>
-<button type="submit" class="btn btn-primary">Enviar</button>
+<button type="submit" class="btn btn-primary" id="submit-button" disabled>Enviar</button>
 </form>
 <br>
 
@@ -174,6 +174,11 @@
         $("#unidade").val("");
         $("#quantidade").val(1);
         $("#preco").val("");
+
+        // Habilita o botão de envio se houver pelo menos um item na tabela
+        if ($("#itens tbody tr").length > 0) {
+          $("#submit-button").prop("disabled", false);
+        }
       } else {
         alert("Preencha todos os campos com valores válidos!");
       }
@@ -185,16 +190,20 @@
       $(this).remove();
       $("#totalGeral").text("R$ " + totalGeral.toFixed(2));
       count--;
+
+      // Desabilita o botão de envio se a tabela estiver vazia
+      if ($("#itens tbody tr").length === 0) {
+        $("#submit-button").prop("disabled", true);
+      }
     });
   });
 
-  /*
     $("#purchase").submit(function() {
 
       $(document).ready(function() {
         $('#loadingModal').modal('show');
       })
-    });*/
+    });
 </script>
 
 
